[gd_scene load_steps=7 format=3 uid="uid://daqmd1m0kfoxb"]

[ext_resource type="Script" path="res://Scenes/Camera/CameraRail/CameraRail.gd" id="1_8la01"]
[ext_resource type="PackedScene" uid="uid://cc0ak8c1sq0nq" path="res://Scenes/Camera/CameraTriggers/CameraTarget.tscn" id="2_1628h"]
[ext_resource type="Texture2D" uid="uid://c5l4bn8hvsoiy" path="res://Assets/Graphics/MISC/line_trace.png" id="3_bsbyk"]
[ext_resource type="LabelSettings" uid="uid://cifcsfg2m6elt" path="res://UI_Theme/speedometer.tres" id="4_0ltjt"]

[sub_resource type="Curve2D" id="Curve2D_rcv3x"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 32, 17.6602, -2.57243, 51.4485, 2.57243, -51.4485, 101, -136.34, -4.04239, 55.4909, 4.04239, -55.4909, 80, -383.34, -13.9646, 26.8267, 13.9646, -26.8267, 100, -487.34, 0, 0, 0, 0, 161, -606.34)
}
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_egwag"]
radius = 60.0

[node name="CameraRail" type="Path2D"]
curve = SubResource("Curve2D_rcv3x")
script = ExtResource("1_8la01")

[node name="FollowNode" type="PathFollow2D" parent="."]
rotates = false

[node name="CameraTarget" parent="FollowNode" instance=ExtResource("2_1628h")]
collision_layer = 0
pull_strength = 2.08165e-12
blend_priority = 20
blend_override = 2.08165e-12

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowNode/CameraTarget"]
shape = SubResource("CircleShape2D_egwag")

[node name="Sprite2D" type="Sprite2D" parent="FollowNode"]
modulate = Color(100, 0, 0, 1)
z_index = 1000
texture = ExtResource("3_bsbyk")

[node name="Dist" type="Label" parent="FollowNode/Sprite2D"]
offset_left = -13.0
offset_top = -15.0
offset_right = 11.0
offset_bottom = -1.0
text = "Dist"
label_settings = ExtResource("4_0ltjt")
